moved font to html, fixed rating align

--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -3,9 +3,6 @@
   flex-wrap: wrap;
   align-items: flex-start;
 
-  max-width: $content-size;
-  min-width: $content-size;
-
   padding: 50px 0;
 
   &__product-card {
