--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,9 +5,6 @@
 
   box-shadow: 0 2px 4px 0 #0000000d;
 
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-
   &__logo {
     margin: 0 50px;
     height: 40px;
