--- a/src/styles/blocks/product-card.scss
+++ b/src/styles/blocks/product-card.scss
@@ -43,6 +43,7 @@ html {
   &__rating {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     line-height: 14px;
 
