--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
 .catalog-container {
   margin: 0 auto;
   max-width: $content-size;
